# anzsic_mapping_demo

./: .env  .gitignore  README.md  _dbcheck.py  anzsic_master.csv  mkdocs.yml  requirements-docs.txt
.github/workflows/: github-pages.yml
GENI/: 01_domainowner_upload_document.ipynb  02_operator_link_document.ipynb  GENI API.json
docs/: architecture.md  index.md  testing.md
docs/decisions/: 001-hexagonal-architecture.md  002-pgvector-hybrid-search.md  003-vertex-ai-embeddings.md  004-rrf-fusion.md  005-gemini-reranking.md  006-multi-provider.md
docs/guides/: cli.md  developer-journey.md  quickstart.md  streamlit.md
docs/reference/: adapters.md  config.md  domain.md  ports.md  services.md
docs/stylesheets/: extra.css
prod/: .env.example  __init__.py  pyproject.toml
prod/adapters/: __init__.py  gcp_auth.py  gemini_langchain_llm.py  gemini_llm.py  geni_llm.py  null_embedding.py  openai_embedding.py  openai_llm.py  postgres_db.py  vertex_embedding.py
prod/config/: prompts.py  settings.py
prod/domain/: __init__.py  exceptions.py  models.py
prod/interfaces/: __init__.py  api.py  cli.py  streamlit_app.py
prod/ports/: database_port.py  embedding_port.py  llm_port.py
prod/services/: __init__.py  classifier.py  container.py  evaluator.py  reranker.py  retriever.py
prod/tests/: TEST_PLAN.md  __init__.py  conftest.py  run_evaluator_offline.py
prod/tests/e2e/: __init__.py  test_classify_pipeline.py
prod/tests/fixtures/: frozen_responses copy.json  frozen_responses.json  golden_results.json  sample_queries.txt
prod/tests/integration/: __init__.py  test_gemini_llm.py  test_geni_llm.py  test_postgres_adapter.py  test_vertex_embedding.py
prod/tests/load/: stress_test.py
prod/tests/unit/: __init__.py  test_classifier.py  test_evaluator.py  test_models.py  test_openai_adapters.py  test_reranker.py  test_rrf_fusion.py
